--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FirestoreProject": "exarbete",
+  "FirebaseAuthFile": "secrets\\exarbete-ee0f2988b118.json"
 }
