completed google auth and registration

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,5 +7,8 @@
   },
   "AllowedHosts": "*",
   "FirestoreProject": "exarbete",
-  "FirebaseAuthFile": "secrets\\exarbete-ee0f2988b118.json"
+  "FirebaseAuthFile": "secrets\\exarbete-ee0f2988b118.json",
+  "ConnectionStrings": {
+    "ExArbeteIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ExArbete;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
