Storage and image-upload. Styling, bugfix

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,5 +10,7 @@
   "FirebaseAuthFile": "secrets\\exarbete-ee0f2988b118.json",
   "ConnectionStrings": {
     "ExArbeteIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ExArbete;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "GoogleCredentialFile": "secrets\\exarbete-8c43944edb7a.json",
+  "GoogleCloudStorageBucket": "exarbete.appspot.com"
 }
