pagetitle from appsettings, bugfix admin

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,10 +7,11 @@
   },
   "AllowedHosts": "*",
   "FirestoreProject": "exarbete",
-  "FirebaseAuthFile": "secrets\\exarbete-ee0f2988b118.json",
+  "FirebaseAuthFile": "secrets\\firebaseCredentials.json",
   "ConnectionStrings": {
     "ExArbeteIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ExArbete;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
-  "GoogleCredentialFile": "secrets\\exarbete-8c43944edb7a.json",
-  "GoogleCloudStorageBucket": "exarbete.appspot.com"
+  "GoogleCredentialFile": "secrets\\storageCredentials.json",
+  "GoogleCloudStorageBucket": "exarbete.appspot.com",
+  "ProjectTitle": "Discus"
 }
